# LibreLibreCell

./: .gitignore  CMakeLists.txt  README.txt  librelibrecell.qrc  version.sh
src/: CMakeLists.txt  about.cpp  about.h  card.cpp  card.h  column.cpp  column.h  columnlayout.cpp  columnlayout.h  cornerwidget.cpp  cornerwidget.h  librelibrecell.cpp  librelibrecell.h  main.cpp  preferences.cpp  preferences.h
